# LTC-LIMAV3-OV-2

./: .env  README.md  lima.spec  makefile  project.toml  pyproject.toml  refactor.txt  requirements.txt  setup.py
src/: main.py
src/cli/: __init__.py  main.py
src/core/: counter.py  detector.py  pipeline.py  tracker.py
src/models/: config.py
src/server/: __init__.py  main.py
src/services/: __init__.py  api_service.py  database_service.py  export_service.py  video_service.py
src/ui/controllers/: app_controller.py
src/ui/themes/: dark_theme.py  light_theme.py
src/ui/views/: counting_view.py  dashboard_view.py  database_view.py  detection_view.py  main_view.py  settings_view.py  video_view.py
src/ui/widgets/: dashboard_view.py  hapuseun_dashboard_view.py  modern_button.py  roi_editor.py  stat_card.py  timeline_graph.py
src/utils/: benchmark.py  logger.py
